fixing issue where article category link colors were not readable when particular background colors were applied #3092

--- a/modules/features/cu_article/css/cu-article.css
+++ b/modules/features/cu_article/css/cu-article.css
@@ -87,7 +87,7 @@ p.tags { margin-top: 20px; }
 
 .article-teaser-meta { text-transform: uppercase; font-size: 11px; }
 
-.article-teaser-meta a:link, .article-teaser-meta a:visited { color: #666; background-color: #e7e7e7; padding: 3px; line-height: 100%; margin: 0 5px 5px 0; font-weight: 600; }
+.article-teaser-meta a:link, .article-teaser-meta a:visited { color: #666 !important; background-color: #e7e7e7; padding: 3px; line-height: 100%; margin: 0 5px 5px 0; font-weight: 600; text-decoration: none; display: inline-block; }
 
 .field-name-field-article-grid-more-link { text-align: center; }
 
